--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "plugins/Vundle.vim"]
-	path = plugins/Vundle.vim
-	url = https://github.com/ecsousa/Vundle.vim.git
+[submodule "plugins/neobundle.vim"]
+	path = plugins/neobundle.vim
+	url = https://github.com/Shougo/neobundle.vim
