--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "plugins/neobundle.vim"]
-	path = plugins/neobundle.vim
-	url = https://github.com/Shougo/neobundle.vim
+[submodule "dein"]
+	path = dein
+	url = https://github.com/Shougo/dein.vim
